Name:           hschain-net
Version:        0.1
Synopsis:       Abstract network API for hschain
Description:
  This package provide abstraction over network for messge passing

Cabal-Version:  >= 1.10
License:        MIT
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base               >=4.9 && <5
                     --
                     , aeson
                     , bytestring         >=0.10
                     , containers         >=0.5.9
                     , data-default-class
                     , exceptions         >=0.8.3
                     , network            >=2.6.0.0 && <2.9
                     , network-info
                     , network            >=2.6.0.0 && <2.9
                     , serialise          >=0.2
                     , stm                >=2.5
                     , text               >=1
  Exposed-modules:
                  HSChain.Network.IpAddresses
                  HSChain.Network.Types
                  HSChain.Network.TCP
                  HSChain.Network.UDP
                  HSChain.Network.Mock
  Other-modules:
                  HSChain.Network.Internal
                  HSChain.Network.Utils


-- Test suite
Test-suite hschain-net-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -qn1"
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-net
                     --
                     , aeson
                     , async             >=2.2.1
                     , bytestring        >=0.10
                     , exceptions
                     , network
                     , random
                     , serialise         >=0.2
                     , retry             >=0.7.6.2
                     , QuickCheck
                     , tasty             >=0.11
                     , tasty-quickcheck
                     , tasty-hunit       >=0.10
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Network
                       TM.RealNetwork
                       TM.Serialisation
