Name:           hschain-types
Version:        0.1
Synopsis:       Core data types of HSChain
Description:
  Data type definitions for HSChain package. Mainly useful for in
  situations when one needs data types but don't want to pull all
  HSChain's dependencies (e.g. with GHCJS).

Cabal-Version:  >= 1.10
License:        MIT
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/hschain
Category:       Data
Build-Type:     Simple


flag sqlite-instances
  Description: Enable instances for sqlite-simple
  Default:     True
  Manual:      True

flag android-impl
  Description: Build for android
  Default:     False
  Manual:      True

Library
  Ghc-options:         -Wall
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-crypto
                     , hschain-merkle
                     , aeson
                     , bytestring        >=0.10
                     , containers        >=0.5.9
                     , deepseq           >=1.4
                     , serialise         >=0.2
                     , text
                     , time
                     , vector
                     , vector-th-unbox
  if !impl(ghcjs) && !flag(android-impl)
    if flag(sqlite-instances)
      CPP-Options:   -DINSTANCES_SQLITE
      Build-Depends: sqlite-simple
  Exposed-modules:
                  HSChain.Types
                  HSChain.Types.BFTTime
                  HSChain.Types.Blockchain
                  HSChain.Types.Validators

-- Test suite
Test-suite hschain-types-tests
  if impl(ghcjs)
    buildable:  False
    js-sources: ../hschain-crypto/js/nacl-fast.js
  --
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -qn1"
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , aeson
                     , bytestring
                     , random
                     , serialise
                     , hschain-crypto
                     , hschain-types
                     , tasty             >=0.11
                     , tasty-hunit       >=0.10
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Time
