Name:           hschain
Version:        0.1
Synopsis:       Haskell reimplementation of tendermint protocol
Description:
  Haskell reimplementation of tendermint protocol

Cabal-Version:  >= 1.10
License:        AllRightsReserved
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple

flag android-impl
  Description: Build for android
  Default:     False
  Manual:      True

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-crypto
                     , hschain-types
                     , aeson
                     , base58-bytestring >=0.1
                     , bytestring        >=0.10
                     , containers        >=0.5.9
                     , data-default-class
                     , deepseq           >=1.4
                     , directory
                     , exceptions        >=0.8.3
                     , filepath
                     , lrucache          >=1.2
                     , mmorph
                     , microlens         >=0.4
                     , microlens-mtl     >=0.1
                     , microlens-th
                     , mtl
                     , network-info
                     , pipes             >=4
                     , prometheus-client
                     , random
                     , random-shuffle
                     , retry             >=0.7.6.2
                     , serialise         >=0.2
                     , sqlite-simple
                     , stm               >=2.5
                     , text
                     , transformers      >=0.5
                     , vector
                     , unordered-containers >=0.2.5.0
                     --
                     , katip              == 0.7.0.0
                     , katip-elasticsearch
                     , http-client-tls
                     , bloodhound
                     , network            >=2.6.0.0 && <2.9
                     , tls                >=1.4.1
                     , x509
                     , x509-store
                     , x509-system
                     , x509-validation

  Exposed-modules:
                  HSChain.Blockchain.Internal.Algorithm
                  HSChain.Blockchain.Internal.Engine
                  HSChain.Blockchain.Internal.Engine.Types
                  HSChain.Blockchain.Internal.Types
                  HSChain.Blockchain.Interpretation
                  HSChain.Control
                  HSChain.Crypto.Containers
                  HSChain.Data.CIntMap
                  HSChain.Debug.Trace
                  HSChain.Exceptions
                  HSChain.Logger
                  HSChain.Logger.Class
                  HSChain.Monitoring
                  HSChain.Run
                  HSChain.Mock.Coin
                  HSChain.Mock.KeyList
                  HSChain.Mock.KeyVal
                  HSChain.Mock.Types
                  HSChain.P2P
                  HSChain.P2P.Network
                  HSChain.P2P.PeerState.Timer
                  HSChain.P2P.PeerState.Types
                  HSChain.P2P.PeerState.Handle
                  HSChain.P2P.PeerState.Handle.Lagging
                  HSChain.P2P.PeerState.Handle.Current
                  HSChain.P2P.PeerState.Handle.Ahead
                  HSChain.P2P.PeerState.Handle.Unknown
                  HSChain.P2P.PeerState.Handle.Utils
                  HSChain.P2P.PeerState.Monad
                  HSChain.P2P.Types
                  HSChain.P2P.Network.IpAddresses
                  HSChain.P2P.Internal
                  HSChain.Store
                  HSChain.Store.STM
                  HSChain.Store.Internal.BlockDB
                  HSChain.Store.Internal.Types
                  HSChain.Store.Internal.Query
                  HSChain.Utils
  Other-modules:
                  HSChain.P2P.Network.Parameters
                  HSChain.P2P.Network.Internal.TLS
                  HSChain.P2P.Network.Internal.TCP
                  HSChain.P2P.Network.Internal.UDP
                  HSChain.P2P.Network.Internal.Mock
                  HSChain.P2P.Network.Internal.Utils
                  HSChain.P2P.Network.RealNetworkStub
                  HSChain.P2P.Internal.PeerRegistry
                  HSChain.P2P.Internal.Types
                  HSChain.P2P.Internal.Logging

Executable hschain-coin-node
  Ghc-options:         -Wall -threaded -Wno-orphans -rtsopts "-with-rtsopts=-N -T -c -qn1"
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.9 && <5
                     , hschain
                     , hschain-types
                     , hschain-crypto
                     , aeson
                     , bytestring           >=0.10
                     , data-default-class
                     , exceptions
                     , filepath
                     , katip                ==0.7.0.0
                     , network              >=2.6.0.0
                     , network-simple       >=0.4.2
                     , optparse-applicative >=0.14
                     , prometheus-client
                     , prometheus-metrics-ghc
                     , transformers
                     , wai-middleware-prometheus
                     , warp
                     , yaml
                     , text
                     , filepath
                     , directory
  hs-source-dirs:      exe
  Main-is:             coin-node.hs

Executable hschain-db
  Ghc-options:         -Wall -threaded -Wno-orphans
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.9 && <5
                     , hschain
                     , hschain-types
                     , hschain-crypto
                     , aeson
                     , cborg                >=0.2
                     , bytestring           >=0.10
                     , containers           >=0.5.7
                     , directory
                     , filepath
                     , optparse-applicative >=0.14
                     , serialise
                     , stm
                     , text
  hs-source-dirs:      exe
  Main-is:             db-dump.hs


-- Test suite
Test-suite hschain-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -qn1"
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain
                     , hschain-crypto
                     , hschain-types
                     , hschain-quickcheck
                     , aeson
                     , async             >=2.2.1
                     , bytestring        >=0.10
                     , containers
                     , exceptions
                     , microlens
                     , network
                     , random
                     , sqlite-simple
                     , katip
                     , serialise         >=0.2
                     , stm               >=2.4
                     , transformers
                     , retry             >=0.7.6.2
                     , text
                     --
                     , QuickCheck
                     , bytestring-arbitrary
                     , generic-arbitrary
                     , hedgehog
                     , hedgehog-quickcheck
                     , tasty             >=0.11
                     , tasty-hedgehog
                     , tasty-quickcheck
                     , tasty-hunit       >=0.10
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Consensus
                       TM.Integration
                       TM.Mempool
                       TM.Merkle
                       TM.MerkleBlock
                       TM.Network
                       TM.P2P.Gossip
                       TM.P2P.PEX
                       TM.RealNetwork
                       TM.Serialisation
                       TM.Time
                       TM.Util.Network
                       TM.Util.Tests
                       TM.Validators

-- Benchmarks
Benchmark hschain-bench
  Type:                exitcode-stdio-1.0
  Ghc-options:         -threaded -O2 -Wall
  hs-source-dirs:      bench
  Default-Language:    Haskell2010
  Main-is:             main.hs
  Build-Depends:       base  >=4.9 && <5
                     , bytestring >=0.10
                     , criterion
                     , deepseq
                     , random
                     , vector
                     --
                     , hschain
                     , hschain-crypto
                     , hschain-types
  if !flag(android-impl)
    Build-Depends: cryptonite
  Other-modules:       ValidatorSetsBench
                       MockCoin
                       Crypto
