Name:           hschain
Version:        0.1
Synopsis:       Haskell reimplementation of tendermint protocol
Description:
  Haskell reimplementation of tendermint protocol

Cabal-Version:  >= 1.10
License:        MIT
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple

flag android-impl
  Description: Build for android
  Default:     False
  Manual:      True

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-crypto
                     , hschain-control
                     , hschain-config
                     , hschain-types
                     , hschain-logger
                     , hschain-mempool
                     , hschain-db
                     , hschain-net
                     , hschain-merkle
                     --
                     , aeson
                     , base58-bytestring >=0.1
                     , bytestring        >=0.10
                     , containers        >=0.5.9
                     , data-default-class
                     , deepseq           >=1.4
                     , directory
                     , exceptions        >=0.8.3
                     , filepath
                     , generic-lens      >=2
                     , lens              >=4.17
                     , lrucache          >=1.2
                     , mmorph
                     , mtl
                     , pipes             >=4
                     , prometheus-client
                     , random
                     , random-shuffle
                     , retry             >=0.7.6.2
                     , serialise         >=0.2
                     , sqlite-simple
                     , stm               >=2.5
                     , text
                     , transformers      >=0.5
                     , vector
                     , unordered-containers >=0.2.5.0
                     --
                     , katip              >=0.8
  Exposed-modules:
                  HSChain.Blockchain.Internal.Algorithm
                  HSChain.Blockchain.Internal.Engine
                  HSChain.Blockchain.Internal.Engine.Types
                  HSChain.Blockchain.Internal.Types
                  HSChain.Crypto.Containers
                  HSChain.Data.CIntMap
                  HSChain.Exceptions
                  HSChain.Monitoring
                  HSChain.Internal.Types.Messages
                  HSChain.Internal.Types.Config
                  HSChain.Internal.Types.Consensus
                  HSChain.Run
                  HSChain.P2P
                  HSChain.P2P.PeerState.Timer
                  HSChain.P2P.PeerState.Types
                  HSChain.P2P.PeerState.Handle
                  HSChain.P2P.PeerState.Handle.Lagging
                  HSChain.P2P.PeerState.Handle.Current
                  HSChain.P2P.PeerState.Handle.Ahead
                  HSChain.P2P.PeerState.Handle.Unknown
                  HSChain.P2P.PeerState.Handle.Utils
                  HSChain.P2P.PeerState.Monad
                  HSChain.P2P.Internal
                  HSChain.Store
                  HSChain.Store.Internal.BlockDB
                  HSChain.Store.Internal.Query
                  HSChain.Store.Internal.Proposals
  Other-modules:
                  HSChain.P2P.Internal.PeerRegistry
                  HSChain.P2P.Internal.Types
