Name:           serialise-cddl
Version:        0.1
Synopsis:       Generator of CDDL schemas
Description:
  Generator of CDDL schemas

Cabal-Version:  >= 1.10
License:        MIT
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Build-Type:     Simple

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends: base           >=4 && <5
               , serialise      >= 0.2
               , bytestring
               , cborg
               , containers
               , transformers
               , text           >=1
               , megaparsec
               , prettyprinter
               , lens
  Exposed-modules:
                  Codec.Serialise.CDDL.AST
                  Codec.Serialise.CDDL.Class
                  Codec.Serialise.CDDL.Check
                  Codec.Serialise.CDDL.Parser


test-suite tests-cddl
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -threaded
  hs-source-dirs:   tests
  main-is:          Main.hs
  build-depends:    base >=4.5 && <5
                  , serialise-cddl
                                    --
                  , megaparsec
                  , bytestring
                  , bytestring-arbitrary
                  , prettyprinter
                  , serialise
                  , tasty
                  , tasty-hunit
                  , tasty-quickcheck
                  , QuickCheck >= 2
                  , generic-arbitrary
                  , text
