Name:           thundermint-crypto
Version:        0.1
Synopsis:       Simple cryptography API for thundermint
Description:
  Simple cryptography API for thundermint

Cabal-Version:  >= 1.10
License:        AllRightsReserved
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , aeson
                     , base58-bytestring >=0.1
                     , bytestring        >=0.10
                     , deepseq           >=1.4
                     , serialise         >=0.2
                     , text              >=1
                     --
  if impl(ghcjs)
    hs-source-dirs: ghcjs .
    Build-depends:     ghcjs-prim
                     , ghcjs-base
                     , SHA               >=1.6 && <2
  else
    hs-source-dirs: ghc .
    Build-Depends:     cryptonite        >=0.25
                     , memory            >=0.14.14
  Exposed-modules:
                  Thundermint.Crypto
                  Thundermint.Crypto.Ed25519

Test-suite thundermint-crypto-tests
  if impl(ghcjs)
    js-sources: js/nacl-fast.js
  --
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N"
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , thundermint-crypto
                     , aeson
                     , bytestring        >=0.10
                     , serialise         >=0.2
                     --
                     , tasty             >=0.11
                     -- Contains fix for GHCJS
                     , tasty-hunit       >=0.10.0.1
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Crypto
