Name:           thundermint-types
Version:        0.1
Synopsis:       Core data types of thundermint
Description:
  Data type definitions for thundermint package. Mainly useful for in
  situations when one needs data types but don't want to pull all
  thundermint's dependencies (e.g. with GHCJS).

Cabal-Version:  >= 1.10
License:        AllRightsReserved
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple


flag sqlite-instances
  Description: Enable instances for sqlite-simple
  Default:     False
  Manual:      True

flag android-impl
  Description: Build for android
  Default:     False
  Manual:      True

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , thundermint-crypto
                     , aeson
                     , async             >=2.2.1
                     , base58-bytestring >=0.1
                     , bytestring        >=0.10
                     , containers        >=0.5.9
                     , data-default-class
                     , deepseq           >=1.4
                     , network           >=2.6.0.0 && <2.9
                     , serialise         >=0.2
                     , text
                     , time
                     , vector
                     , vector-th-unbox
                     , unordered-containers >=0.2.5.0
  if flag(sqlite-instances)
    if !impl(ghcjs) && !flag(android-impl)
      CPP-Options:   -DINSTANCES_SQLITE
      Build-Depends: sqlite-simple
  Exposed-modules:
                  Thundermint.Types
                  Thundermint.Types.Network
                  Thundermint.Types.Validators
                  Thundermint.Types.Blockchain
