Name:           thundermint-types
Version:        0.1
Synopsis:       Core data types of thundermint
Description:
  Data type definitions for thundermint package. Mainly useful for in
  situations when one needs data types but don't want to pull all
  thundermint's dependencies (e.g. with GHCJS).

Cabal-Version:  >= 1.10
License:        AllRightsReserved
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple


flag sqlite-instances
  Description: Enable instances for sqlite-simple
  Default:     True
  Manual:      True

flag android-impl
  Description: Build for android
  Default:     False
  Manual:      True

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , thundermint-crypto
                     , aeson
                     , async             >=2.2.1
                     , base58-bytestring >=0.1
                     , bytestring        >=0.10
                     , containers        >=0.5.9
                     , data-default-class
                     , deepseq           >=1.4
                     , serialise         >=0.2
                     , text
                     , time
                     , vector
                     , vector-th-unbox
                     , unordered-containers >=0.2.5.0
  if arch(i386) || arch(x86_64)
    CPP-Options:   -DWORDS_LITTLEENDIAN
  if !impl(ghcjs) && !flag(android-impl)
    if flag(sqlite-instances)
      CPP-Options:   -DINSTANCES_SQLITE
      Build-Depends: sqlite-simple
  Exposed-modules:
                  Thundermint.Types
                  Thundermint.Types.Network
                  Thundermint.Types.Validators
                  Thundermint.Types.Blockchain
